# xnu-rs

./: .gitignore  AGENTS.md  Cargo.toml  ROADMAP.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.zed/: settings.json
bootloader/: Cargo.toml
bootloader/src/: boot_args.rs  device_tree.rs  main.rs
kernel/: Cargo.toml
kernel/linker/: aarch64.ld
kernel/src/: boot_args.rs  device_tree.rs  lib.rs  main.rs
kernel/src/alloc/: mod.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.rs  context.rs  exception.rs  gic.rs  mmu.rs  mod.rs  smp.rs  syscall.rs  uart.rs
kernel/src/drivers/virtio/: blk.rs  mod.rs  transport.rs
kernel/src/exec/: dyld.rs  loader.rs  macho.rs  mod.rs
kernel/src/fs/: mod.rs  xnrsfs.rs
kernel/src/ipc/: mach_msg.rs  mach_port.rs  mod.rs  rights.rs
kernel/src/mach/: mod.rs  task.rs
kernel/src/mm/: frame.rs  mapping.rs  mod.rs  vma.rs
kernel/src/sched/: context_switch.rs  mod.rs  runqueue.rs  task.rs  thread.rs
kernel/src/syscall/: bsd.rs  mach.rs  mod.rs  platform.rs
kernel/src/util/: bitfield.rs  error.rs  mod.rs  sync.rs
lib/loader/: Cargo.toml
lib/loader/src/: fat.rs  fixup.rs  image.rs  lib.rs  load_cmd.rs
lib/zs-alloc/: Cargo.toml
lib/zs-alloc/src/: class.rs  lib.rs  page.rs
loader/: Cargo.toml
loader/src/: lib.rs  main.rs
userspace/hello/: Cargo.toml
userspace/hello/.cargo/: config.toml
userspace/hello/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
