[workspace]
members = [
    "xtask",
    "kernel",
    "bootloader",
    "lib/loader",
    "lib/zs-alloc",
    "userspace/hello",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.98"

[workspace.dependencies]
loader = { path = "lib/loader" }
zs-alloc = { path = "lib/zs-alloc" }

# Third party dependencies
log = "0.4.30"
spin = "0.12.0"
object = { version = "0.39.1", default-features = false, features = ["elf", "macho", "read_core"] }
arm-gic = "0.8.1"
aarch64-cpu = "11.2.0"
aarch64-paging = { version = "0.12.1", default-features = false, features = ["alloc"] }
uefi = "0.37.0"
gpt = "4.1.0"
fatfs = { version = "0.3.6", default-features = false, features = ["std"] }
lz4_flex = { version = "0.13.1", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }

[workspace.lints.rust]
# Every rustc warning is an error. Individual lints below can override this
# back to "warn" (their priority 0 beats the group's -1) where a warning level
# is intentional.
warnings = { level = "deny", priority = -1 }
# `bun_asan` is set via RUSTFLAGS (`--cfg=bun_asan` + `--check-cfg=cfg(bun_asan)`)
# by scripts/build/rust.ts for asan builds; register it here so a plain
# `cargo build` / `cargo check` (without those flags) doesn't warn.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bun_asan)'] }
# link.exe unconditionally prints "Creating library X.dll.lib and object
# X.dll.exp" to stdout when linking each proc-macro DLL on Windows hosts;
# there is no linker flag to suppress it. The lint already exempts itself
# from `-D warnings`, so this only silences the noise.
linker_messages = "allow"
dead_code = "deny"
# Every crate in this workspace is an internal implementation detail of one
# binary, so `pub` is a claim that *another crate* imports the item. If it
# doesn't, write `pub(crate)` — that keeps the item under `dead_code` analysis
# instead of being exempted as an external API root. Macro-generated items that
# must stay `pub` carry `#[allow(unreachable_pub)]` at the expansion site.
unreachable_pub = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unused_assignments = "deny"
unused_macros = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"

[workspace.lints.clippy]
# == provenance-safe pointer casts ==
# Prefer `.cast::<T>()` / `.cast_const()` / `.cast_mut()` / `ptr::from_ref` /
# `ptr::from_mut` over `as *const T` / `as *mut T`. The method forms cannot
# accidentally change mutability or perform a ref→raw coercion in one step,
# and they preserve provenance under Strict Provenance.
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
ref_as_ptr = "deny"
borrow_as_ptr = "deny"

# == soundness / leak prevention ==
undocumented_unsafe_blocks = "deny"
not_unsafe_ptr_arg_deref = "deny"
mem_forget = "deny"
cast_ptr_alignment = "deny"
transmute_ptr_to_ptr = "deny"
as_ptr_cast_mut = "deny"
drop_non_drop = "deny"
uninit_vec = "deny"

# == performance ==
redundant_clone = "deny"
unnecessary_to_owned = "deny"
needless_collect = "deny"
or_fun_call = "deny"
assigning_clones = "deny"
implicit_clone = "deny"
iter_overeager_cloned = "deny"
map_clone = "deny"
trivially_copy_pass_by_ref = "deny"
large_types_passed_by_value = "deny"
large_enum_variant = "deny"
large_stack_frames = "deny"
vec_init_then_push = "deny"
format_collect = "deny"
manual_memcpy = "deny"
needless_pass_by_value = "deny"

# == clarity / api hygiene ==
unnecessary_unwrap = "deny"
derive_partial_eq_without_eq = "deny"
derivable_impls = "deny"
clone_on_ref_ptr = "deny"
if_same_then_else = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
clone_on_copy = "deny"
useless_conversion = "deny"
# vec_box / boxed_local: legit patterns are `#[expect]`-suppressed at the site
# with a one-line "why the box is load-bearing" comment (intrusive-list address
# stability, JsClass finalizer thunk contract). Anything new must justify itself.
vec_box = "deny"
boxed_local = "deny"
arc_with_non_send_sync = "deny"
manual_swap = "deny"
mem_replace_option_with_none = "deny"
redundant_locals = "deny"
manual_c_str_literals = "deny"
precedence = "deny"
implicit_saturating_sub = "deny"
ptr_eq = "deny"

# == disallowed-* (configured in clippy.toml) ==
disallowed_methods = "deny"
disallowed_types = "deny"
disallowed_macros = "deny"

# == explicitly allowed (Zig-port style; intentional) ==
collapsible_if = "allow"
collapsible_else_if = "allow"
collapsible_match = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
len_zero = "allow"
len_without_is_empty = "allow"
needless_return = "allow"
module_inception = "allow"
missing_safety_doc = "allow"
let_unit_value = "allow"
needless_update = "allow"
explicit_auto_deref = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
enum_variant_names = "allow"
upper_case_acronyms = "allow"
wrong_self_convention = "allow"
should_implement_trait = "allow"
new_without_default = "allow"
self_named_constructors = "allow"  # Zig-port `Type::init()` constructor convention
single_match = "allow"
manual_range_contains = "allow"
needless_lifetimes = "allow"
needless_range_loop = "allow"
while_let_loop = "allow"
while_let_on_iterator = "allow"
blocks_in_conditions = "allow"
diverging_sub_expression = "allow"
declare_interior_mutable_const = "allow"
empty_line_after_doc_comments = "allow"
empty_docs = "allow"
excessive_precision = "allow"
unreadable_literal = "allow"
approx_constant = "allow"
result_unit_err = "allow"
only_used_in_recursion = "allow"
# `as u32` etc. is identity on some libc targets, required widen on others
unnecessary_cast = "allow"
new_ret_no_self = "allow"
map_identity = "allow"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
split-debuginfo = "packed"
lto = "thin"
panic = "abort"

[profile.release]
opt-level = 3
split-debuginfo = "packed"
lto = "thin"
panic = "abort"
