[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.98"
publish = false

[lints]
workspace = true

[dependencies]
log.workspace = true
spin.workspace = true
goblin.workspace = true
aarch64-cpu.workspace = true
aarch64-paging.workspace = true
arm-gic.workspace = true
