[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
log.workspace = true
spin.workspace = true
object.workspace = true
aarch64-cpu.workspace = true
aarch64-paging.workspace = true
arm-gic.workspace = true
